  * Build the list of languages for the current display level at runtime
    instead of having separate templates for them. This does make starting
    localechooser slightly slower, but saves memory. Closes: #365307.
  * Ensure we always set debconf/language and call gtk-set-font at the same
    time. Thanks to Jérémy Bobbio for his help tracing this. Closes: #470481.
  * Various code cleanups.
  * Bump version to 2.00.

 -- Frans Pop <fjp@debian.org>  Tue, 11 Mar 2008 15:01:20 +0100

localechooser (1.46) unstable; urgency=low

  [ Updated translations ]
  * Finnish (fi.po) by Esko Arajärvi
  * Hindi (hi.po) by Kumar Appaiah
  * Indonesian (id.po) by Arief S Fitrianto
  * Central Khmer (km.po) by Khoem Sokhem
  * Latvian (lv.po) by Viesturs Zarins
  * Nepali (ne.po) by Shyam Krishna Bal
  * Panjabi (pa.po) by Amanpreet Singh Alam
  * Portuguese (Brazil) (pt_BR.po) by Felipe Augusto van de Wiel (faw)
  * Slovenian (sl.po) by Matej Kovacic
  * Turkish (tr.po) by Recai Oktaş
  * Ukrainian (uk.po)
  * Wolof (wo.po) by Mouhamadou Mamoune Mbacke

 -- Otavio Salvador <otavio@debian.org>  Fri, 15 Feb 2008 08:20:51 -0200

localechooser (1.45) unstable; urgency=low

  * Add new ISO-3166 codes (BL and MF) to the region map
  * Recompile wrt new iso-codes that includes the two new codes

 -- Christian Perrier <bubulle@debian.org>  Sun, 20 Jan 2008 11:06:33 +0100

localechooser (1.44) unstable; urgency=low

  * Activate Amharic
  * Add localized name for Kashmiri.
  * Add (commented) entry for Kashmiri in the language list.
  
  [ Updated translations ]
  * Amharic (am.po) by tegegne tefera
  * Kurdish (ku.po) by Erdal Ronahi
  * Portuguese (pt.po) by Miguel Figueiredo

 -- Christian Perrier <bubulle@debian.org>  Tue, 08 Jan 2008 21:58:29 +0100

localechooser (1.43) unstable; urgency=low

  * Rebuilt with new locales package to include de_LI locale. Closes: #453614

  [ Updated translations ]
  * Dzongkha (dz.po) by Jurmey Rabgay
  * Malayalam (ml.po) by Praveen A