@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Debian Install System Team <debian-boot@lists.debian.org>
 Uploaders: Petter Reinholdtsen <pere@debian.org>, Christian Perrier <bubulle@debian.org>, Frans Pop <fjp@debian.org>, Joey Hess <joeyh@debian.org>
 Build-Depends: debhelper (>= 4.2)
-Build-Depends-Indep: dash | ash, dpkg-dev (>= 1.9), locales, iso-codes (>= 0.21-1), intltool-debian (>= 0.30+20040212), po-debconf, python, python-xml
+Build-Depends-Indep: dash | ash, dpkg-dev (>= 1.9), locales, iso-codes (>= 0.21-1), intltool-debian (>= 0.30+20040212), po-debconf, python (>= 2.4)
 Vcs-Svn: svn://svn.debian.org/d-i/trunk/packages/localechooser
 
 Package: localechooser
