@@ -19,10 +19,14 @@ localechooser (2.00) UNRELEASED; urgency=low
     localechooser slightly slower, but saves memory. Closes: #365307.
   * Ensure we always set debconf/language and call gtk-set-font at the same
     time. Thanks to Jérémy Bobbio for his help tracing this. Closes: #470481.
+  * Patch by Matthias Klose stolen from Ubuntu (closes: #468635):
+    - iso3166tab.py: Include ErrorPrinter and DefaultHandler from obsolete
+      saxutils.py
+    - drop build dependency on python-xml
   * Various code cleanups.
   * Bump version to 2.00.
 
- -- Frans Pop <fjp@debian.org>  Tue, 11 Mar 2008 15:01:20 +0100
+ -- Frans Pop <fjp@debian.org>  Wed, 12 Mar 2008 17:43:55 +0100
 
 localechooser (1.46) unstable; urgency=low
 
